--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,40 @@
+/*css for home page code*/
+header {
+  background-color: #f8f9fa;
+  padding: 20px;
+  text-align: center;
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline;
+  margin: 0 15px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #007bff;
+}
+
+main {
+  padding: 20px;
+}
+
+footer {
+  text-align: center;
+  padding: 10px;
+  background-color: #f8f9fa;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+
+/* css for bday page*/
+
 html {
   box-sizing: border-box;
 }
