--- a/style/main.css
+++ b/style/main.css
@@ -75,22 +75,7 @@ body {
   display: block;
   overflow: hidden;
 }
-.iframe-container {
-  width: 100%;
-  max-width: 100%;
-  height: 500px; /* Adjust height as needed */
-  overflow: hidden;
-  position: relative;
-}
 
-.iframe-container iframe {
-  width: 100%;
-  height: 1000px; /* The original height of your embedded page */
-  border: none;
-  transform: scale(0.5); /* Scale down the content */
-  transform-origin: top left;
-  pointer-events: auto;
-}
 footer {
   margin-top: 20px;
   background: #f8f9fa;
@@ -103,7 +88,7 @@ footer {
 
 html {
   box-sizing: border-box;
-}
+}pa
 
 body {
   font-family: 'Poppins', sans-serif;
